Bug 1165184 - Move nsChildContentList to its own header. r=peterv